15824
{code}
package x

object test {
}
{code} 

It should compile. Compilation is fine by 2.8.0.


{code}
/home/vladimirk/1/x/test2.scala:1: error: illegal start of definition
package x
^
one error found
{code}

Scala: 
Scala code runner version 2.8.1.r0-b20101116134703 -- Copyright 2002-2010, LAMP/EPFL

Java:
java version "1.6.0_22"
Java(TM) SE Runtime Environment (build 1.6.0_22-b04)
Java HotSpot(TM) 64-Bit Server VM (build 17.1-b03, mixed mode)

Operating system: 
Linux vladimirk 2.6.34.7-0.5-desktop SI-1 SMP PREEMPT 2010-10-25 08:40:12 +0200 x86_64 x86_64 x86_64 GNU/Linux
